@@ -1,3 +1,8 @@
+2001-06-22  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* core/gdaladefaultoverviews.c: Fixed crash with refreshing overviews
+	during build.
+
 2001-06-21  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Added core/gdal_drivertut.dox, documentation on writing drivers.
